VQ-2948: Implementation of Dynamic Screens with Internationalization Support - Documents

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1236,6 +1236,8 @@
         "distribution_channel": "分销渠道",
         "dob": "出生日期",
         "dob_required": "出生日期是必填项",
+        "documents_uploaded": "文件已上传",
+        "documents_upload": "上传文件",
         "economic_sector": "经济部门",
         "email_address": "电子邮箱地址",
         "existing_client": "现有客户",
@@ -1256,6 +1258,7 @@
         "nationality": "国籍",
         "nationality_required": "国籍是必填项",
         "new_client": "新客户",
+        "no_file_upload_available": "无法上传文件",
         "occupation": "职业",
         "phone_number": "电话号码",
         "physical_address": "实际地址",
@@ -1266,6 +1269,7 @@
         "preferred_channel": "首选渠道",
         "premium_frequency": "保费频率",
         "purpose_of_insurance": "保险目的",
+        "save_and_continue": "保存并继续",
         "select_bank": "选择银行",
         "select_bank_branch": "选择银行分行",
         "select_branch": "选择分行",
