--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1237,6 +1237,8 @@
         "distribution_channel": "Vertriebskanal",
         "dob": "Geburtsdatum",
         "dob_required": "Geburtsdatum ist erforderlich",
+        "documents_uploaded": "Dokumente hochgeladen",
+        "documents_upload": "Dokumente hochladen",
         "economic_sector": "Wirtschaftssektor",
         "email_address": "E-Mail-Adresse",
         "existing_client": "Bestehender Kunde",
@@ -1257,6 +1259,7 @@
         "nationality": "Nationalität",
         "nationality_required": "Nationalität ist erforderlich",
         "new_client": "Neuer Kunde",
+        "no_file_upload_available": "Kein Datei-Upload verfügbar",
         "occupation": "Beruf",
         "phone_number": "Telefonnummer",
         "physical_address": "Physische Adresse",
@@ -1267,6 +1270,7 @@
         "preferred_channel": "Bevorzugter Kanal",
         "premium_frequency": "Prämienfrequenz",
         "purpose_of_insurance": "Zweck der Versicherung",
+        "save_and_continue": "Speichern und fortfahren",
         "select_bank": "Bank auswählen",
         "select_bank_branch": "Bankfiliale auswählen",
         "select_branch": "Filiale auswählen",
