--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1266,6 +1266,8 @@
           "distribution_channel":"Distribution Channel",
           "dob": "Date of Birth",
           "dob_required": "Date of Birth is required",
+          "documents_uploaded": "Documents Uploaded",
+          "documents_upload": "Documents Upload",
           "economic_sector": "Economic Sector",
           "email_address":"Email Address",
           "existing_client": "Existing Client",
@@ -1286,6 +1288,7 @@
           "nationality": "Nationality",
           "nationality_required": "Nationality is required",
           "new_client": "New Client",
+          "no_file_upload_available": "No File Upload Available",
           "occupation": "Occupation",
           "phone_number" :"Phone Number",
           "physical_address":"Physical Address",
@@ -1296,6 +1299,7 @@
           "preferred_channel":"Preferred Channel",
           "premium_frequency":"Premium Frequency",
           "purpose_of_insurance": "Purpose of Insurance",
+          "save_and_continue":"Save and Continue",
           "select_bank":"Select Bank",
           "select_bank_branch":"Select Bank Branch",
           "select_branch": "Select Branch",
