--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1236,6 +1236,8 @@
         "distribution_channel": "Canal de distribución",
         "dob": "Fecha de nacimiento",
         "dob_required": "La fecha de nacimiento es obligatoria",
+        "documents_uploaded": "Documentos subidos",
+        "documents_upload": "Subida de documentos",
         "economic_sector": "Sector económico",
         "email_address": "Dirección de correo electrónico",
         "existing_client": "Cliente existente",
@@ -1256,6 +1258,7 @@
         "nationality": "Nacionalidad",
         "nationality_required": "La nacionalidad es obligatoria",
         "new_client": "Nuevo cliente",
+        "no_file_upload_available": "No hay subida de archivos disponible",
         "occupation": "Ocupación",
         "phone_number": "Número de teléfono",
         "physical_address": "Dirección física",
@@ -1266,6 +1269,7 @@
         "preferred_channel": "Canal preferido",
         "premium_frequency": "Frecuencia de prima",
         "purpose_of_insurance": "Propósito del seguro",
+        "save_and_continue": "Guardar y continuar",
         "select_bank": "Seleccionar banco",
         "select_bank_branch": "Seleccionar sucursal bancaria",
         "select_branch": "Seleccionar sucursal",
