--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1238,6 +1238,8 @@
         "distribution_channel": "Canal de distribution",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
+        "documents_uploaded": "Documents téléchargés",
+        "documents_upload": "Téléchargement de documents",
         "economic_sector": "Secteur économique",
         "email_address": "Adresse e-mail",
         "existing_client": "Client existant",
@@ -1258,6 +1260,7 @@
         "nationality": "Nationalité",
         "nationality_required": "La nationalité est requise",
         "new_client": "Nouveau client",
+        "no_file_upload_available": "Aucun téléchargement de fichier disponible",
         "occupation": "Profession",
         "phone_number": "Numéro de téléphone",
         "physical_address": "Adresse physique",
@@ -1268,6 +1271,7 @@
         "preferred_channel": "Canal préféré",
         "premium_frequency": "Fréquence des primes",
         "purpose_of_insurance": "Objet de l'assurance",
+        "save_and_continue": "Enregistrer et continuer",
         "select_bank": "Sélectionner la banque",
         "select_bank_branch": "Sélectionner l'agence bancaire",
         "select_branch": "Sélectionner l'agence",
