--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1239,6 +1239,8 @@
         "distribution_channel": "Njia ya Usambazaji",
         "dob": "Tarehe ya Kuzaliwa",
         "dob_required": "Tarehe ya kuzaliwa inahitajika",
+        "documents_uploaded": "Hati zimepakiwa",
+        "documents_upload": "Pakia Hati",
         "economic_sector": "Sekta ya Uchumi",
         "email_address": "Barua Pepe",
         "existing_client": "Mteja Aliyepo",
@@ -1259,6 +1261,7 @@
         "nationality": "Utaifa",
         "nationality_required": "Utaifa unahitajika",
         "new_client": "Mteja Mpya",
+        "no_file_upload_available": "Hakuna Upakiaji wa Faili Unapatikana",
         "occupation": "Kazi",
         "phone_number": "Nambari ya Simu",
         "physical_address": "Anuani ya Makazi",
@@ -1269,6 +1272,7 @@
         "preferred_channel": "Njia Inayopendelewa",
         "premium_frequency": "Mzunguko wa Malipo ya Bima",
         "purpose_of_insurance": "Kusudi la Bima",
+        "save_and_continue": "Hifadhi na Endelea",
         "select_bank": "Chagua Benki",
         "select_bank_branch": "Chagua Tawi la Benki",
         "select_branch": "Chagua Tawi",
