VQ-2948: Implementation of Dynamic Screens with Internationalization Support - Product

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1220,6 +1220,8 @@
     "ind": {
       "quotations": {
         "account_number": "账号",
+        "add_coinsurance_option": "添加共保选项",
+        "agent": "代理人",
         "bank": "银行",
         "bank_branch": "银行分行",
         "banking_details": "银行详情",
@@ -1228,27 +1230,35 @@
         "branch_required": "分行是必填项",
         "citizenship": "国籍",
         "client": "客户",
+        "coinsurance": "共保",
+        "coinsurer_share": "共保人份额",
         "contact_details": "联系详情",
         "continue": "继续",
         "country": "国家",
         "county": "县/区",
+        "cover_types": "保险类型",
         "currency": "货币",
         "distribution_channel": "分销渠道",
+        "do_you_wish_to_have_the_benefit_of_escalation_option": "您希望享有递增选项的好处吗",
         "dob": "出生日期",
         "dob_required": "出生日期是必填项",
         "documents_uploaded": "文件已上传",
         "documents_upload": "上传文件",
         "economic_sector": "经济部门",
         "email_address": "电子邮箱地址",
+        "escalation": "递增",
+        "escalation_rate": "递增率",
         "existing_client": "现有客户",
         "female": "女性",
         "first_name": "名字",
         "first_name_required": "名字是必填项",
+        "frequency_of_payment": "付款频率",
         "gender": "性别",
         "iban": "国际银行账号",
         "incorrect_id_no_format": "身份证号码格式错误",
         "last_name": "姓氏",
         "last_name_required": "姓氏是必填项",
+        "leader_share": "主保险人份额",
         "male": "男性",
         "marital_status": "婚姻状况",
         "mode_of_identity": "身份证明类型",
@@ -1258,8 +1268,11 @@
         "nationality": "国籍",
         "nationality_required": "国籍是必填项",
         "new_client": "新客户",
+        "no": "否",
+        "no_cover_type_available": "没有可用的保险类型",
         "no_file_upload_available": "无法上传文件",
         "occupation": "职业",
+        "option": "选项",
         "phone_number": "电话号码",
         "physical_address": "实际地址",
         "pin_number": "密码",
@@ -1267,7 +1280,13 @@
         "po_box_number": "邮政信箱号码",
         "postal_address_details": "邮寄地址详情",
         "preferred_channel": "首选渠道",
+        "premium": "保费",
         "premium_frequency": "保费频率",
+        "product": "产品",
+        "product_details": "产品详情",
+        "product_selection": "产品选择",
+        "proposal_date": "提案日期",
+        "proposal_sign_date": "提案签署日期",
         "purpose_of_insurance": "保险目的",
         "save_and_continue": "保存并继续",
         "select_bank": "选择银行",
@@ -1275,26 +1294,38 @@
         "select_branch": "选择分行",
         "select_citizenship": "选择国籍",
         "select_client": "选择客户",
+        "select_coinsurer": "选择共保人",
         "select_country": "选择国家",
         "select_county": "选择县/区",
         "select_currency": "选择货币",
         "select_economic_sector": "选择经济部门",
+        "select_escalation_option": "选择递增选项",
+        "select_frequency_of_payment": "选择付款频率",
+        "select_leader": "选择主保险人",
         "select_marital_status": "选择婚姻状况",
         "select_mode_of_identity": "选择身份证明类型",
         "select_occupation_status": "选择职业",
         "select_nationality": "选择国籍",
+        "select_option": "选择选项",
+        "select_or_type_agent_name": "选择或输入代理人姓名",
         "select_preferred_channel": "选择首选渠道",
+        "select_product": "选择产品",
+        "select_rate": "选择费率",
         "select_source": "选择来源",
+        "select_term": "选择期限",
         "select_title": "选择称谓",
         "select_town": "选择城镇",
         "sms_number": "短信号码",
         "source_of_funds": "资金来源",
+        "sum_assured": "保额",
+        "term": "期限",
         "title": "称谓",
         "type_of_employment": "就业类型",
         "town": "城镇",
         "wealth_aml_details": "财富反洗钱详情",
         "with_effect_from": "生效日期",
-        "with_effect_to": "终止日期"
+        "with_effect_to": "终止日期",
+        "yes": "是"
       },
       "causation_cause": "因果原因",
       "causation_type": "因果类型",
