--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1250,35 +1250,45 @@
        "ind": {
         "quotations": {
           "account_number":"Account No.",
+          "add_coinsurance_option": "Add Coinsurance Option",
+          "agent":"Agent",
           "bank": "Bank",
-          "bank_branch":" Bank Branch",
+          "bank_branch":"Bank Branch",
           "banking_details":"Banking Details",
           "basic_details": "Basic Details",
           "branch": "Branch",
           "branch_required":"Branch is required",
           "citizenship":"Citizenship",
           "client": "Client",
+          "coinsurance":"Coinsurance",
+          "coinsurer_share":"Coinsurer Share",
           "contact_details": "Contact Details",
           "continue": "Continue",
           "country": "Country",
           "county": "County",
+          "cover_types":"Cover Types",
           "currency":"Currency",
           "distribution_channel":"Distribution Channel",
+          "do_you_wish_to_have_the_benefit_of_escalation_option":"Do you wish to have the benefit of escalation option",
           "dob": "Date of Birth",
           "dob_required": "Date of Birth is required",
           "documents_uploaded": "Documents Uploaded",
           "documents_upload": "Documents Upload",
           "economic_sector": "Economic Sector",
           "email_address":"Email Address",
+          "escalation":"Escalation",
+          "escalation_rate":"Escalation Rate",
           "existing_client": "Existing Client",
           "female": "Female",
           "first_name": "First Name",
           "first_name_required": "First Name is required",
+          "frequency_of_payment": "Frequency of Payment",
           "gender":"Gender",
           "iban": "IBAN",
           "incorrect_id_no_format": "Incorrect ID No Format",
           "last_name": "Last Name",
           "last_name_required": "Last Name is required",
+          "leader_share":"Leader Share",
           "male": "Male",
           "marital_status": "Marital Status",
           "mode_of_identity": "Mode of Identity",
@@ -1288,8 +1298,11 @@
           "nationality": "Nationality",
           "nationality_required": "Nationality is required",
           "new_client": "New Client",
+          "no": "No",
+          "no_cover_type_available": "No Cover Type Available",
           "no_file_upload_available": "No File Upload Available",
           "occupation": "Occupation",
+          "option": "Option",
           "phone_number" :"Phone Number",
           "physical_address":"Physical Address",
           "pin_number": "PIN Number",
@@ -1297,7 +1310,13 @@
           "po_box_number":"P.O. Box Number",
           "postal_address_details" :"Postal Address Details",
           "preferred_channel":"Preferred Channel",
+          "premium": "Premium",
           "premium_frequency":"Premium Frequency",
+          "product": "Product",
+          "product_details": "Product Details",
+          "product_selection": "Product Selection",
+          "proposal_date": "Proposal Date",
+          "proposal_sign_date": "Proposal Sign Date",
           "purpose_of_insurance": "Purpose of Insurance",
           "save_and_continue":"Save and Continue",
           "select_bank":"Select Bank",
@@ -1305,26 +1324,38 @@
           "select_branch": "Select Branch",
           "select_citizenship":"Select Citizenship",
           "select_client":"Select Client",
+          "select_coinsurer": "Select Coinsurer",
           "select_country": "Select Country",
           "select_county": "Select County",
           "select_currency": "Select Currency",
           "select_economic_sector": "Select Economic Sector",
+          "select_escalation_option": "Select Escalation Option",
+          "select_frequency_of_payment": "Select Frequency of Payment",
+          "select_leader": "Select Leader",
           "select_marital_status": "Select Marital Status",
           "select_mode_of_identity": "Select Mode of Identity",
           "select_occupation_status": "Select Occupation",
+          "select_option": "Select Option",
           "select_nationality": "Select Nationality",
+          "select_or_type_agent_name": "Select or Type Agent Name",
           "select_preferred_channel": "Select Preferred Channel",
+          "select_product": "Select Product",
+          "select_rate": "Select Rate",
           "select_source":"Select Source",
+          "select_term": "Select Term",
           "select_title": "Select Title",
           "select_town": "Select Town",
           "sms_number":"SMS Number",
           "source_of_funds":"Source of Funds",
+          "sum_assured": "Sum Assured",
+          "term": "Term",
           "title": "Title",
           "type_of_employment":"Type of Employment",
           "town": "Town",
           "wealth_aml_details":"Wealth AML details",
           "with_effect_from":"With Effect From",
-          "with_effect_to":"With Effect To"
+          "with_effect_to":"With Effect To",
+          "yes": "Yes"
         },
       "causation_cause": "Causation Cause",
       "causation_type": "Causation Type",
