--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1220,6 +1220,8 @@
     "ind": {
       "quotations": {
         "account_number": "Número de cuenta",
+        "add_coinsurance_option": "Agregar opción de coaseguro",
+        "agent": "Agente",
         "bank": "Banco",
         "bank_branch": "Sucursal bancaria",
         "banking_details": "Detalles bancarios",
@@ -1228,27 +1230,35 @@
         "branch_required": "La sucursal es obligatoria",
         "citizenship": "Ciudadanía",
         "client": "Cliente",
+        "coinsurance": "Coaseguro",
+        "coinsurer_share": "Participación del coasegurador",
         "contact_details": "Detalles de contacto",
         "continue": "Continuar",
         "country": "País",
         "county": "Condado",
+        "cover_types": "Tipos de cobertura",
         "currency": "Moneda",
         "distribution_channel": "Canal de distribución",
+        "do_you_wish_to_have_the_benefit_of_escalation_option": "¿Desea tener el beneficio de la opción de escalación?",
         "dob": "Fecha de nacimiento",
         "dob_required": "La fecha de nacimiento es obligatoria",
         "documents_uploaded": "Documentos subidos",
         "documents_upload": "Subida de documentos",
         "economic_sector": "Sector económico",
         "email_address": "Dirección de correo electrónico",
+        "escalation": "Escalación",
+        "escalation_rate": "Tasa de escalación",
         "existing_client": "Cliente existente",
         "female": "Femenino",
         "first_name": "Nombre",
         "first_name_required": "El nombre es obligatorio",
+        "frequency_of_payment": "Frecuencia de pago",
         "gender": "Género",
         "iban": "IBAN",
         "incorrect_id_no_format": "Formato incorrecto del número de identificación",
         "last_name": "Apellido",
         "last_name_required": "El apellido es obligatorio",
+        "leader_share": "Participación del líder",
         "male": "Masculino",
         "marital_status": "Estado civil",
         "mode_of_identity": "Tipo de identificación",
@@ -1258,8 +1268,11 @@
         "nationality": "Nacionalidad",
         "nationality_required": "La nacionalidad es obligatoria",
         "new_client": "Nuevo cliente",
+        "no": "No",
+        "no_cover_type_available": "No hay tipo de cobertura disponible",
         "no_file_upload_available": "No hay subida de archivos disponible",
         "occupation": "Ocupación",
+        "option": "Opción",
         "phone_number": "Número de teléfono",
         "physical_address": "Dirección física",
         "pin_number": "Número PIN",
@@ -1267,7 +1280,13 @@
         "po_box_number": "Número de apartado postal",
         "postal_address_details": "Detalles de la dirección postal",
         "preferred_channel": "Canal preferido",
+        "premium": "Prima",
         "premium_frequency": "Frecuencia de prima",
+        "product": "Producto",
+        "product_details": "Detalles del producto",
+        "product_selection": "Selección de producto",
+        "proposal_date": "Fecha de propuesta",
+        "proposal_sign_date": "Fecha de firma de la propuesta",
         "purpose_of_insurance": "Propósito del seguro",
         "save_and_continue": "Guardar y continuar",
         "select_bank": "Seleccionar banco",
@@ -1275,26 +1294,38 @@
         "select_branch": "Seleccionar sucursal",
         "select_citizenship": "Seleccionar ciudadanía",
         "select_client": "Seleccionar cliente",
+        "select_coinsurer": "Seleccionar coasegurador",
         "select_country": "Seleccionar país",
         "select_county": "Seleccionar condado",
         "select_currency": "Seleccionar moneda",
         "select_economic_sector": "Seleccionar sector económico",
+        "select_escalation_option": "Seleccionar opción de escalación",
+        "select_frequency_of_payment": "Seleccionar frecuencia de pago",
+        "select_leader": "Seleccionar líder",
         "select_marital_status": "Seleccionar estado civil",
         "select_mode_of_identity": "Seleccionar tipo de identificación",
         "select_occupation_status": "Seleccionar ocupación",
         "select_nationality": "Seleccionar nacionalidad",
+        "select_option": "Seleccionar opción",
+        "select_or_type_agent_name": "Seleccione o escriba el nombre del agente",
         "select_preferred_channel": "Seleccionar canal preferido",
+        "select_product": "Seleccionar producto",
+        "select_rate": "Seleccionar tasa",
         "select_source": "Seleccionar fuente",
+        "select_term": "Seleccionar término",
         "select_title": "Seleccionar título",
         "select_town": "Seleccionar ciudad",
         "sms_number": "Número SMS",
         "source_of_funds": "Fuente de fondos",
+        "sum_assured": "Suma asegurada",
+        "term": "Término",
         "title": "Título",
         "type_of_employment": "Tipo de empleo",
         "town": "Ciudad",
         "wealth_aml_details": "Detalles AML sobre patrimonio",
         "with_effect_from": "Con efecto desde",
-        "with_effect_to": "Con efecto hasta"
+        "with_effect_to": "Con efecto hasta",
+        "yes": "Sí"
       },
       "causation_cause": "Causa de la causalidad",
       "causation_type": "Tipo de causalidad",
