--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1223,6 +1223,8 @@
     "ind": {
       "quotations": {
         "account_number": "Nambari ya Akaunti",
+        "add_coinsurance_option": "Ongeza Chaguo la Bima ya Pamoja",
+        "agent": "Wakala",
         "bank": "Benki",
         "bank_branch": "Tawi la Benki",
         "banking_details": "Maelezo ya Benki",
@@ -1231,27 +1233,35 @@
         "branch_required": "Tawi linahitajika",
         "citizenship": "Uraia",
         "client": "Mteja",
+        "coinsurance": "Bima ya Pamoja",
+        "coinsurer_share": "Sehemu ya Mshirika wa Bima",
         "contact_details": "Maelezo ya Mawasiliano",
         "continue": "Endelea",
         "country": "Nchi",
         "county": "Kaunti",
+        "cover_types": "Aina za Bima",
         "currency": "Sarafu",
         "distribution_channel": "Njia ya Usambazaji",
+        "do_you_wish_to_have_the_benefit_of_escalation_option": "Je, unataka kufaidika na chaguo la ongezeko?",
         "dob": "Tarehe ya Kuzaliwa",
         "dob_required": "Tarehe ya kuzaliwa inahitajika",
         "documents_uploaded": "Hati zimepakiwa",
         "documents_upload": "Pakia Hati",
         "economic_sector": "Sekta ya Uchumi",
         "email_address": "Barua Pepe",
+        "escalation": "Ongezeko",
+        "escalation_rate": "Kiwango cha Ongezeko",
         "existing_client": "Mteja Aliyepo",
         "female": "Mwanamke",
         "first_name": "Jina la Kwanza",
         "first_name_required": "Jina la kwanza linahitajika",
+        "frequency_of_payment": "Mara ya Malipo",
         "gender": "Jinsia",
         "iban": "IBAN",
         "incorrect_id_no_format": "Muundo wa Nambari ya Kitambulisho sio sahihi",
         "last_name": "Jina la Mwisho",
         "last_name_required": "Jina la mwisho linahitajika",
+        "leader_share": "Sehemu ya Kiongozi",
         "male": "Mwanaume",
         "marital_status": "Hali ya Ndoa",
         "mode_of_identity": "Aina ya Kitambulisho",
@@ -1261,8 +1271,11 @@
         "nationality": "Utaifa",
         "nationality_required": "Utaifa unahitajika",
         "new_client": "Mteja Mpya",
+        "no": "Hapana",
+        "no_cover_type_available": "Hakuna Aina ya Bima Inayopatikana",
         "no_file_upload_available": "Hakuna Upakiaji wa Faili Unapatikana",
         "occupation": "Kazi",
+        "option": "Chaguo",
         "phone_number": "Nambari ya Simu",
         "physical_address": "Anuani ya Makazi",
         "pin_number": "Nambari ya PIN",
@@ -1270,7 +1283,13 @@
         "po_box_number": "Sanduku la Posta",
         "postal_address_details": "Maelezo ya Anuani ya Posta",
         "preferred_channel": "Njia Inayopendelewa",
+        "premium": "Malipo ya Bima",
         "premium_frequency": "Mzunguko wa Malipo ya Bima",
+        "product": "Bidhaa",
+        "product_details": "Maelezo ya Bidhaa",
+        "product_selection": "Uteuzi wa Bidhaa",
+        "proposal_date": "Tarehe ya Pendekezo",
+        "proposal_sign_date": "Tarehe ya Kusaini Pendekezo",
         "purpose_of_insurance": "Kusudi la Bima",
         "save_and_continue": "Hifadhi na Endelea",
         "select_bank": "Chagua Benki",
@@ -1278,26 +1297,38 @@
         "select_branch": "Chagua Tawi",
         "select_citizenship": "Chagua Uraia",
         "select_client": "Chagua Mteja",
+        "select_coinsurer": "Chagua Mshirika wa Bima",
         "select_country": "Chagua Nchi",
         "select_county": "Chagua Kaunti",
         "select_currency": "Chagua Sarafu",
         "select_economic_sector": "Chagua Sekta ya Uchumi",
+        "select_escalation_option": "Chagua Chaguo la Ongezeko",
+        "select_frequency_of_payment": "Chagua Mara ya Malipo",
+        "select_leader": "Chagua Kiongozi",
         "select_marital_status": "Chagua Hali ya Ndoa",
         "select_mode_of_identity": "Chagua Aina ya Kitambulisho",
         "select_occupation_status": "Chagua Kazi",
+        "select_option": "Chagua Chaguo",
+        "select_or_type_agent_name": "Chagua au Andika Jina la Wakala",
         "select_nationality": "Chagua Utaifa",
         "select_preferred_channel": "Chagua Njia Inayopendelewa",
+        "select_product": "Chagua Bidhaa",
+        "select_rate": "Chagua Kiwango",
         "select_source": "Chagua Chanzo",
+        "select_term": "Chagua Kipindi",
         "select_title": "Chagua Kichwa",
         "select_town": "Chagua Mji",
         "sms_number": "Nambari ya SMS",
         "source_of_funds": "Chanzo cha Fedha",
+        "sum_assured": "Jumla Iliyohakikishwa",
+        "term": "Kipindi",
         "title": "Kichwa",
         "type_of_employment": "Aina ya Ajira",
         "town": "Mji",
         "wealth_aml_details": "Maelezo ya AML ya Mali",
         "with_effect_from": "Kuanzia Tarehe",
-        "with_effect_to": "Hadi Tarehe"
+        "with_effect_to": "Hadi Tarehe",
+        "yes": "Ndio"
       },
       "causation_cause": "Sababu ya kisa",
       "causation_type": "Aina ya kisa",
