--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1221,6 +1221,8 @@
     "ind": {
       "quotations": {
         "account_number": "Kontonummer",
+        "add_coinsurance_option": "Mitversicherung hinzufügen",
+        "agent": "Agent",
         "bank": "Bank",
         "bank_branch": "Bankfiliale",
         "banking_details": "Bankdaten",
@@ -1229,27 +1231,35 @@
         "branch_required": "Filiale ist erforderlich",
         "citizenship": "Staatsangehörigkeit",
         "client": "Kunde",
+        "coinsurance": "Mitversicherung",
+        "coinsurer_share": "Anteil des Mitversicherers",
         "contact_details": "Kontaktdaten",
         "continue": "Weiter",
         "country": "Land",
         "county": "Bezirk",
+        "cover_types": "Deckungsarten",
         "currency": "Währung",
         "distribution_channel": "Vertriebskanal",
+        "do_you_wish_to_have_the_benefit_of_escalation_option": "Möchten Sie von der Eskalationsoption profitieren",
         "dob": "Geburtsdatum",
         "dob_required": "Geburtsdatum ist erforderlich",
         "documents_uploaded": "Dokumente hochgeladen",
         "documents_upload": "Dokumente hochladen",
         "economic_sector": "Wirtschaftssektor",
         "email_address": "E-Mail-Adresse",
+        "escalation": "Eskalation",
+        "escalation_rate": "Eskalationsrate",
         "existing_client": "Bestehender Kunde",
         "female": "Weiblich",
         "first_name": "Vorname",
         "first_name_required": "Vorname ist erforderlich",
+        "frequency_of_payment": "Zahlungshäufigkeit",
         "gender": "Geschlecht",
         "iban": "IBAN",
         "incorrect_id_no_format": "Falsches Ausweisnummernformat",
         "last_name": "Nachname",
         "last_name_required": "Nachname ist erforderlich",
+        "leader_share": "Anteil des Hauptversicherers",
         "male": "Männlich",
         "marital_status": "Familienstand",
         "mode_of_identity": "Identitätsnachweis",
@@ -1259,8 +1269,11 @@
         "nationality": "Nationalität",
         "nationality_required": "Nationalität ist erforderlich",
         "new_client": "Neuer Kunde",
+        "no": "Nein",
+        "no_cover_type_available": "Keine Deckungsart verfügbar",
         "no_file_upload_available": "Kein Datei-Upload verfügbar",
         "occupation": "Beruf",
+        "option": "Option",
         "phone_number": "Telefonnummer",
         "physical_address": "Physische Adresse",
         "pin_number": "PIN-Nummer",
@@ -1268,7 +1281,13 @@
         "po_box_number": "Postfachnummer",
         "postal_address_details": "Postanschrift Details",
         "preferred_channel": "Bevorzugter Kanal",
+        "premium": "Prämie",
         "premium_frequency": "Prämienfrequenz",
+        "product": "Produkt",
+        "product_details": "Produktdetails",
+        "product_selection": "Produktauswahl",
+        "proposal_date": "Antragsdatum",
+        "proposal_sign_date": "Unterschriftsdatum des Antrags",
         "purpose_of_insurance": "Zweck der Versicherung",
         "save_and_continue": "Speichern und fortfahren",
         "select_bank": "Bank auswählen",
@@ -1276,26 +1295,38 @@
         "select_branch": "Filiale auswählen",
         "select_citizenship": "Staatsangehörigkeit auswählen",
         "select_client": "Kunde auswählen",
+        "select_coinsurer": "Mitversicherer auswählen",
         "select_country": "Land auswählen",
         "select_county": "Bezirk auswählen",
         "select_currency": "Währung auswählen",
         "select_economic_sector": "Wirtschaftssektor auswählen",
+        "select_escalation_option": "Eskalationsoption auswählen",
+        "select_frequency_of_payment": "Zahlungshäufigkeit auswählen",
+        "select_leader": "Hauptversicherer auswählen",
         "select_marital_status": "Familienstand auswählen",
         "select_mode_of_identity": "Identitätsnachweis auswählen",
-        "select_occupation_status": "Beruf auswählen",
         "select_nationality": "Nationalität auswählen",
+        "select_occupation_status": "Beruf auswählen",
+        "select_option": "Option auswählen",
+        "select_or_type_agent_name": "Wählen oder geben Sie den Agentennamen ein",
         "select_preferred_channel": "Bevorzugten Kanal auswählen",
+        "select_product": "Produkt auswählen",
+        "select_rate": "Rate auswählen",
         "select_source": "Quelle auswählen",
+        "select_term": "Laufzeit auswählen",
         "select_title": "Titel auswählen",
         "select_town": "Stadt auswählen",
         "sms_number": "SMS-Nummer",
         "source_of_funds": "Mittelherkunft",
+        "sum_assured": "Versicherungssumme",
+        "term": "Laufzeit",
         "title": "Titel",
         "type_of_employment": "Beschäftigungsart",
         "town": "Stadt",
         "wealth_aml_details": "Vermögens-AML-Details",
         "with_effect_from": "Gültig ab",
-        "with_effect_to": "Gültig bis"
+        "with_effect_to": "Gültig bis",
+        "yes": "Ja"
       },
       "causation_cause": "Ursachenzusammenhang",
       "causation_type": "Ursachentyp",
