--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1222,6 +1222,8 @@
     "ind": {
       "quotations": {
         "account_number": "Numéro de compte",
+        "add_coinsurance_option": "Ajouter une option de coassurance",
+        "agent": "Agent",
         "bank": "Banque",
         "bank_branch": "Agence bancaire",
         "banking_details": "Détails bancaires",
@@ -1230,27 +1232,35 @@
         "branch_required": "L'agence est requise",
         "citizenship": "Nationalité",
         "client": "Client",
+        "coinsurance": "Coassurance",
+        "coinsurer_share": "Part du coassureur",
         "contact_details": "Détails de contact",
         "continue": "Continuer",
         "country": "Pays",
         "county": "Comté",
+        "cover_types": "Types de couverture",
         "currency": "Devise",
         "distribution_channel": "Canal de distribution",
+        "do_you_wish_to_have_the_benefit_of_escalation_option": "Souhaitez-vous bénéficier de l'option d'escalade",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
         "documents_uploaded": "Documents téléchargés",
         "documents_upload": "Téléchargement de documents",
         "economic_sector": "Secteur économique",
         "email_address": "Adresse e-mail",
+        "escalation": "Escalade",
+        "escalation_rate": "Taux d'escalade",
         "existing_client": "Client existant",
         "female": "Femme",
         "first_name": "Prénom",
         "first_name_required": "Le prénom est requis",
+        "frequency_of_payment": "Fréquence de paiement",
         "gender": "Genre",
         "iban": "IBAN",
         "incorrect_id_no_format": "Format du numéro d'identification incorrect",
         "last_name": "Nom de famille",
         "last_name_required": "Le nom de famille est requis",
+        "leader_share": "Part du leader",
         "male": "Homme",
         "marital_status": "État civil",
         "mode_of_identity": "Type d'identité",
@@ -1260,8 +1270,11 @@
         "nationality": "Nationalité",
         "nationality_required": "La nationalité est requise",
         "new_client": "Nouveau client",
+        "no": "Non",
+        "no_cover_type_available": "Aucun type de couverture disponible",
         "no_file_upload_available": "Aucun téléchargement de fichier disponible",
         "occupation": "Profession",
+        "option": "Option",
         "phone_number": "Numéro de téléphone",
         "physical_address": "Adresse physique",
         "pin_number": "Numéro PIN",
@@ -1269,7 +1282,13 @@
         "po_box_number": "Numéro de boîte postale",
         "postal_address_details": "Détails de l'adresse postale",
         "preferred_channel": "Canal préféré",
+        "premium": "Prime",
         "premium_frequency": "Fréquence des primes",
+        "product": "Produit",
+        "product_details": "Détails du produit",
+        "product_selection": "Sélection de produit",
+        "proposal_date": "Date de la proposition",
+        "proposal_sign_date": "Date de signature de la proposition",
         "purpose_of_insurance": "Objet de l'assurance",
         "save_and_continue": "Enregistrer et continuer",
         "select_bank": "Sélectionner la banque",
@@ -1277,26 +1296,38 @@
         "select_branch": "Sélectionner l'agence",
         "select_citizenship": "Sélectionner la nationalité",
         "select_client": "Sélectionner le client",
+        "select_coinsurer": "Sélectionner le coassureur",
         "select_country": "Sélectionner le pays",
         "select_county": "Sélectionner le comté",
         "select_currency": "Sélectionner la devise",
         "select_economic_sector": "Sélectionner le secteur économique",
+        "select_escalation_option": "Sélectionner l'option d'escalade",
+        "select_frequency_of_payment": "Sélectionner la fréquence de paiement",
+        "select_leader": "Sélectionner le leader",
         "select_marital_status": "Sélectionner l'état civil",
         "select_mode_of_identity": "Sélectionner le type d'identité",
         "select_occupation_status": "Sélectionner la profession",
         "select_nationality": "Sélectionner la nationalité",
+        "select_option": "Sélectionner une option",
+        "select_or_type_agent_name": "Sélectionnez ou tapez le nom de l'agent",
         "select_preferred_channel": "Sélectionner le canal préféré",
+        "select_product": "Sélectionner un produit",
+        "select_rate": "Sélectionner le taux",
         "select_source": "Sélectionner la source",
+        "select_term": "Sélectionner la durée",
         "select_title": "Sélectionner le titre",
         "select_town": "Sélectionner la ville",
         "sms_number": "Numéro SMS",
         "source_of_funds": "Source des fonds",
+        "sum_assured": "Somme assurée",
+        "term": "Durée",
         "title": "Titre",
         "type_of_employment": "Type d'emploi",
         "town": "Ville",
         "wealth_aml_details": "Détails AML sur la richesse",
         "with_effect_from": "En vigueur à partir du",
-        "with_effect_to": "En vigueur jusqu'au"
+        "with_effect_to": "En vigueur jusqu'au",
+        "yes": "Oui"
       },
       "causation_cause": "Cause de causalité",
       "causation_type": "Type de causalité",
